# ap2

./: .env.agent.example  .env.gateway.example  .gitignore  .vercelignore  AGENT.md  BACKEND.md  BRUTAL_SECURITY_ANALYSIS.md  DASHBOARD.md  PROTOTYPE_AUTH_HARDENING_PLAN.md  PROTOTYPE_GUARDRAIL_PLAN.md  README.md  RUNBOOK.md  index.html  requirements.txt  vercel.json
agent_service/: requirements.txt
agent_service/app/: main.py
agent_service/app/core/: agent_logger.py  config.py  request_context.py
agent_service/app/domain/: orchestrator.py
agent_service/app/services/: auth_service.py  pydantic_payment_agent.py  retrieval.py  session_manager.py  tool_router.py
agent_service/prompts/: payment_agent_prompt.txt
api/: index.py
gateway_service/: requirements.txt
gateway_service/app/: main.py
gateway_service/app/api/: security.py
gateway_service/scripts/: bootstrap_dummy_data.py  init_supabase_dummy_db.py  set_all_balances.py
onboarding_dashboard/: FRONTEND.md  README.md  agent-logs.html  agent-logs.js  app.js  config.js  index.html  landing.js  signup.html  styles.css
scripts/: bootstrap.ps1  cli_login.py  cli_voice.py  fastrtc_real_local.py  run_agent.ps1  run_frontend.ps1  run_gateway.ps1  run_stack.ps1  run_voice_cli.ps1  stop_stack.ps1
shared_lib/: pyproject.toml
shared_lib/shared_lib/: __init__.py
shared_lib/shared_lib/contracts/: __init__.py  agent.py  auth_context.py  payment.py  user.py
shared_lib/shared_lib/core/: __init__.py  errors.py  idempotency.py
shared_lib/shared_lib_agent_payments.egg-info/: PKG-INFO  SOURCES.txt
(+22 files in other folders)
